Fix regression in ResourceUrlCreator due to PR1204 patch
* netx/net/sourceforge/jnlp/cache/ResourceUrlCreator.java:
(getVersionedUrl) fix regression in previous PR1204 patch. Refactor
to not take Resource parameter, use instance's field instead.
(uriPartToString) new method
* tests/netx/unit/net/sourceforge/jnlp/cache/ResourceUrlCreatorTest.java:
new tests for ResourceUrlCreator.getVersionedUrl